--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,17 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Marcio Ribeiro
+email: marcioribp@gmail.com
+description: # this means to ignore newlines until "baseurl:"
+  I'm a Software Engineer and Data Scientist based on São Paulo, Brazil. This
+  blog is a place for me to share ideas and things I've done so far, some of
+  my topics of interest include Machine Learning applied to Computer Graphics,
+  Game Development and Physics.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: marciovai
+github_username:  marciovai
 
 # Build settings
 theme: minima
