--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: # this means to ignore newlines until "baseurl:"
   blog is a place for me to share ideas and things I've done, some of
   my topics of interest include Machine Learning applied to Computer Graphics 
   and Game Development.
-url: "https://marcioribeiro.cc" # the subpath of your site, e.g. /blog
+url: "www.marcioribeiro.cc" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: marciovai
 github_username:  marciovai
