--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ github_username:  marciovai # replace with your_github_username or comment to re
 # instagram_username: marciovai # replace with your_instagram_username or comment to remove link from footer
 
 disqus:
-  shortname: marcioribeiro # to enable comments replace with your_disqus_shortname
+  shortname: disqus_3ZMS2RTAd0 # to enable comments replace with your_disqus_shortname
 
 # google_tag_manager: GTM-XXXXXXX # Uncomment to enable GTM. Replace GTM-XXXXXXX with your GTM container ID
 
