--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ disqus:
 # google_tag_manager: GTM-XXXXXXX # Uncomment to enable GTM. Replace GTM-XXXXXXX with your GTM container ID
 
 service_worker: true
+google_analytics: UA-173063605-1
 
 # BUILD SETTINGS
 markdown: kramdown
